@@ -34,6 +34,6 @@ When filing a bug, please include a patch or pull request.
 
 LICENSE AND COPYRIGHT
 
-Copyright (C) 2016-2018 Nigel Horne
+Copyright (C) 2016-2024 Nigel Horne
 
 This program is released under the following licence: GPL2
